zokrates_cli/examples/compile_errors/generics/duplicate_struct_generic.zok
struct A<N, N> {
    field[N] a;
}

def main() {
    return;
}
